# GuardRail

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_scan.py
guardrail/: __init__.py  cli.py  proxy.py  sanitizer.py  scanner.py
guardrail/rules/: __init__.py  patterns.yml  replacements.yml  trigger_words.yml
skill/: SKILL.md
tests/: test_scanner.py
