[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrail-safety"
version = "0.1.0"
description = "AI content safety scanner — scan, detect, and sanitize unsafe content in text"
authors = [
    { name = "zhangzhiwei610" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["content-safety", "ai-safety", "moderation", "sanitization", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://gitee.com/zhangzhiwei610/GuardRail"
Repository = "https://gitee.com/zhangzhiwei610/GuardRail"

[project.scripts]
guardrail = "guardrail.cli:main"

[tool.setuptools.packages.find]
include = ["guardrail", "guardrail.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
